Closed Bug 202163 Opened 23 years ago Closed 21 years ago

caret mode: caret disappears after finding text (FAYT text mode)

Categories

(SeaMonkey :: Find In Page, defect, P5)

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: ginnchen+exoracle)

References

Details

Attachments

(1 file)

while browsing in caret mode, if initiate find as you type to find text, the caret disappears. not sure if this is another variation (same cause) as bug 169297. it's not exactly the same since window switching isn't involved here. tested witb 2003.04.15 comm bits. 1. turn caret browsing mode on (hit F7). 2. go to http://bugzilla.org/ 3. mouseclick to place the caret just to the left of "What's all this..." 4. hit / to manually start text mode of FAYT. 5. start entering some non-linked text in the first paragraph, eg, "sys" (without quotes). 6. after "sys" is highlighted, hit any of the arrow keys to move the caret. results: highlighting goes away (expected), but so does the caret (not expected). workaround: if i hit arrow keys enough, eventually i'll reach some linked text, at which point the caret reappears.
Blocks: caretnav
Severity: normal → minor
Priority: -- → P5
Attached patch patchSplinter Review
Keep caret enable/disable as prefs' setting after current find stopped.
Assignee: aaronleventhal → ginn.chen
Status: NEW → ASSIGNED
Comment on attachment 155676 [details] [diff] [review] patch review? aaron
Attachment #155676 - Flags: review?(aaronleventhal)
Attachment #155676 - Flags: review?(aaronleventhal) → review+
Attachment #155676 - Flags: superreview?(roc)
Attachment #155676 - Flags: superreview?(roc) → superreview+
Fixed. Checking in nsTypeAheadFind.cpp; /cvsroot/mozilla/extensions/typeaheadfind/src/nsTypeAheadFind.cpp,v <-- nsTypeAheadFind.cpp new revision: 1.95; previous revision: 1.94 done
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Product: Core → SeaMonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: