Bug 202163 caret mode: caret disappears after finding text (FAYT text mode) r=aaronl, sr=roc, patch=ginn.chen@sun.com